# serializer version: 1
# name: test_get_catalyts
  dict({
    'items': list([
      dict({
        'chaos_value': 0.5,
        'expected_reroll_profit': 0.4893,
        'icon': 'https://web.poecdn.com/gen/image/WzI1LDE0LHsiZiI6IjJESXRlbXMvQ3VycmVuY3kvQ2F0YWx5c3RzL0FicmFzaXZlQ2F0YWx5c3QiLCJ3IjoxLCJoIjoxLCJzY2FsZSI6MX1d/c4e7f7f379/AbrasiveCatalyst.png',
        'lifeforce_per_reroll': 30,
        'name': 'Abrasive Catalyst',
        'reroll_weight': 334,
      }),
      dict({
        'chaos_value': 1.0,
        'expected_reroll_profit': -0.1532,
        'icon': 'https://web.poecdn.com/gen/image/WzI1LDE0LHsiZiI6IjJESXRlbXMvQ3VycmVuY3kvQ2F0YWx5c3RzL1NwZWVkTW9kaWZpZXJDYXRhbHlzdCIsInciOjEsImgiOjEsInNjYWxlIjoxfV0/592075333a/SpeedModifierCatalyst.png',
        'lifeforce_per_reroll': 30,
        'name': 'Accelerating Catalyst',
        'reroll_weight': 82,
      }),
      dict({
        'chaos_value': 6.54,
        'expected_reroll_profit': -5.9074,
        'icon': 'https://web.poecdn.com/gen/image/WzI1LDE0LHsiZiI6IjJESXRlbXMvQ3VycmVuY3kvQ2F0YWx5c3RzL0ZlcnRpbGVDYXRhbHlzdCIsInciOjEsImgiOjEsInNjYWxlIjoxfV0/4b4ca5d929/FertileCatalyst.png',
        'lifeforce_per_reroll': 30,
        'name': 'Fertile Catalyst',
        'reroll_weight': 83,
      }),
      dict({
        'chaos_value': 0.5,
        'expected_reroll_profit': 0.4606,
        'icon': 'https://web.poecdn.com/gen/image/WzI1LDE0LHsiZiI6IjJESXRlbXMvQ3VycmVuY3kvQ2F0YWx5c3RzL0ltYnVlZENhdGFseXN0IiwidyI6MSwiaCI6MSwic2NhbGUiOjF9XQ/9053293cf6/ImbuedCatalyst.png',
        'lifeforce_per_reroll': 30,
        'name': 'Imbued Catalyst',
        'reroll_weight': 281,
      }),
      dict({
        'chaos_value': 1.0,
        'expected_reroll_profit': -0.0458,
        'icon': 'https://web.poecdn.com/gen/image/WzI1LDE0LHsiZiI6IjJESXRlbXMvQ3VycmVuY3kvQ2F0YWx5c3RzL0ludHJpbnNpY0NhdGFseXN0IiwidyI6MSwiaCI6MSwic2NhbGUiOjF9XQ/107ffb799e/IntrinsicCatalyst.png',
        'lifeforce_per_reroll': 30,
        'name': 'Intrinsic Catalyst',
        'reroll_weight': 529,
      }),
      dict({
        'chaos_value': 0.5,
        'expected_reroll_profit': 0.4876,
        'icon': 'https://web.poecdn.com/gen/image/WzI1LDE0LHsiZiI6IjJESXRlbXMvQ3VycmVuY3kvQ2F0YWx5c3RzL0NoYW9zUGh5c2ljYWxDYXRhbHlzdCIsInciOjEsImgiOjEsInNjYWxlIjoxfV0/bbdf8917e4/ChaosPhysicalCatalyst.png',
        'lifeforce_per_reroll': 30,
        'name': 'Noxious Catalyst',
        'reroll_weight': 331,
      }),
      dict({
        'chaos_value': 9.75,
        'expected_reroll_profit': -9.2701,
        'icon': 'https://web.poecdn.com/gen/image/WzI1LDE0LHsiZiI6IjJESXRlbXMvQ3VycmVuY3kvQ2F0YWx5c3RzL1ByaXNtYXRpY0NhdGFseXN0IiwidyI6MSwiaCI6MSwic2NhbGUiOjF9XQ/5e51d41a0e/PrismaticCatalyst.png',
        'lifeforce_per_reroll': 30,
        'name': 'Prismatic Catalyst',
        'reroll_weight': 90,
      }),
      dict({
        'chaos_value': 2.0,
        'expected_reroll_profit': -1.192,
        'icon': 'https://web.poecdn.com/gen/image/WzI1LDE0LHsiZiI6IjJESXRlbXMvQ3VycmVuY3kvQ2F0YWx5c3RzL1RlbXBlcmluZ0NhdGFseXN0IiwidyI6MSwiaCI6MSwic2NhbGUiOjF9XQ/7b6277022e/TemperingCatalyst.png',
        'lifeforce_per_reroll': 30,
        'name': 'Tempering Catalyst',
        'reroll_weight': 84,
      }),
      dict({
        'chaos_value': 0.8,
        'expected_reroll_profit': 0.1349,
        'icon': 'https://web.poecdn.com/gen/image/WzI1LDE0LHsiZiI6IjJESXRlbXMvQ3VycmVuY3kvQ2F0YWx5c3RzL1R1cmJ1bGVudENhdGFseXN0IiwidyI6MSwiaCI6MSwic2NhbGUiOjF9XQ/fc41fe8950/TurbulentCatalyst.png',
        'lifeforce_per_reroll': 30,
        'name': 'Turbulent Catalyst',
        'reroll_weight': 330,
      }),
      dict({
        'chaos_value': 2.0,
        'expected_reroll_profit': -1.192,
        'icon': 'https://web.poecdn.com/gen/image/WzI1LDE0LHsiZiI6IjJESXRlbXMvQ3VycmVuY3kvQ2F0YWx5c3RzL0NyaXRpY2FsTW9kaWZpZXJDYXRhbHlzdCIsInciOjEsImgiOjEsInNjYWxlIjoxfV0/18e5522c0e/CriticalModifierCatalyst.png',
        'lifeforce_per_reroll': 30,
        'name': 'Unstable Catalyst',
        'reroll_weight': 84,
      }),
    ]),
    'lifeforce': dict({
      'chaos_value': 0.0187,
      'icon': 'https://web.poecdn.com/gen/image/WzI1LDE0LHsiZiI6IjJESXRlbXMvQ3VycmVuY3kvSGFydmVzdC9WaXZpZExpZmVmb3JjZSIsInciOjEsImgiOjEsInNjYWxlIjoxfV0/9e3d712362/VividLifeforce.png',
      'name': 'Vivid Crystallised Lifeforce',
    }),
    'total_weight': 2228,
  })
# ---
# name: test_get_orbs
  dict({
    'items': list([
      dict({
        'chaos_value': 8.0,
        'expected_reroll_profit': -1.0582,
        'icon': 'https://web.poecdn.com/gen/image/WzI1LDE0LHsiZiI6IjJESXRlbXMvQ3VycmVuY3kvRGVsaXJpdW0vRGVsaXJpdW1PcmJBYnlzcyIsInciOjEsImgiOjEsInNjYWxlIjoxfV0/9c2b5d6d64/DeliriumOrbAbyss.png',
        'lifeforce_per_reroll': 30,
        'name': 'Abyssal Delirium Orb',
        'reroll_weight': 35,
      }),
      dict({
        'chaos_value': 5.0,
        'expected_reroll_profit': 2.552,
        'icon': 'https://web.poecdn.com/gen/image/WzI1LDE0LHsiZiI6IjJESXRlbXMvQ3VycmVuY3kvRGVsaXJpdW0vRGVsaXJpdW1PcmJBcm1vdXIiLCJ3IjoxLCJoIjoxLCJzY2FsZSI6MX1d/3f5099006e/DeliriumOrbArmour.png',
        'lifeforce_per_reroll': 30,
        'name': "Armoursmith's Delirium Orb",
        'reroll_weight': 736,
      }),
      dict({
        'chaos_value': 5.0,
        'expected_reroll_profit': 2.5134,
        'icon': 'https://web.poecdn.com/gen/image/WzI1LDE0LHsiZiI6IjJESXRlbXMvQ3VycmVuY3kvRGVsaXJpdW0vRGVsaXJpdW1PcmJXZWFwb25zIiwidyI6MSwiaCI6MSwic2NhbGUiOjF9XQ/1a249fbf02/DeliriumOrbWeapons.png',
        'lifeforce_per_reroll': 30,
        'name': "Blacksmith's Delirium Orb",
        'reroll_weight': 698,
      }),
      dict({
        'chaos_value': 9.8,
        'expected_reroll_profit': -2.886,
        'icon': 'https://web.poecdn.com/gen/image/WzI1LDE0LHsiZiI6IjJESXRlbXMvQ3VycmVuY3kvRGVsaXJpdW0vRGVsaXJpdW1PcmJCbGlnaHQiLCJ3IjoxLCJoIjoxLCJzY2FsZSI6MX1d/b609cfbb50/DeliriumOrbBlight.png',
        'lifeforce_per_reroll': 30,
        'name': 'Blighted Delirium Orb',
        'reroll_weight': 50,
      }),
      dict({
        'chaos_value': 10.0,
        'expected_reroll_profit': -3.1152,
        'icon': 'https://web.poecdn.com/gen/image/WzI1LDE0LHsiZiI6IjJESXRlbXMvQ3VycmVuY3kvRGVsaXJpdW0vRGVsaXJpdW1PcmJNYXBzIiwidyI6MSwiaCI6MSwic2NhbGUiOjF9XQ/ad4a59a2fc/DeliriumOrbMaps.png',
        'lifeforce_per_reroll': 30,
        'name': "Cartographer's Delirium Orb",
        'reroll_weight': 85,
      }),
      dict({
        'chaos_value': 12.0,
        'expected_reroll_profit': -5.2674,
        'icon': 'https://web.poecdn.com/gen/image/WzI1LDE0LHsiZiI6IjJESXRlbXMvQ3VycmVuY3kvRGVsaXJpdW0vRGVsaXJpdW1PcmJEaXZpbmF0aW9uQ2FyZHMiLCJ3IjoxLCJoIjoxLCJzY2FsZSI6MX1d/e47017caab/DeliriumOrbDivinationCards.png',
        'lifeforce_per_reroll': 30,
        'name': "Diviner's Delirium Orb",
        'reroll_weight': 161,
      }),
      dict({
        'chaos_value': 13.0,
        'expected_reroll_profit': -7.1808,
        'icon': 'https://web.poecdn.com/gen/image/WzI1LDE0LHsiZiI6IjJESXRlbXMvQ3VycmVuY3kvRGVsaXJpdW0vRGVsaXJpdW1PcmJDdXJyZW5jeSIsInciOjEsImgiOjEsInNjYWxlIjoxfV0/edac9239bd/DeliriumOrbCurrency.png',
        'lifeforce_per_reroll': 30,
        'name': 'Fine Delirium Orb',
        'reroll_weight': 605,
      }),
      dict({
        'chaos_value': 8.0,
        'expected_reroll_profit': -1.0697,
        'icon': 'https://web.poecdn.com/gen/image/WzI1LDE0LHsiZiI6IjJESXRlbXMvQ3VycmVuY3kvRGVsaXJpdW0vRGVsaXJpdW1PcmJIYXJiaW5nZXIiLCJ3IjoxLCJoIjoxLCJzY2FsZSI6MX1d/707c1f792a/DeliriumOrbHarbinger.png',
        'lifeforce_per_reroll': 30,
        'name': 'Foreboding Delirium Orb',
        'reroll_weight': 99,
      }),
      dict({
        'chaos_value': 8.0,
        'expected_reroll_profit': -1.0574,
        'icon': 'https://web.poecdn.com/gen/image/WzI1LDE0LHsiZiI6IjJESXRlbXMvQ3VycmVuY3kvRGVsaXJpdW0vRGVsaXJpdW1PcmJGb3NzaWxzIiwidyI6MSwiaCI6MSwic2NhbGUiOjF9XQ/ea3a92a762/DeliriumOrbFossils.png',
        'lifeforce_per_reroll': 30,
        'name': 'Fossilised Delirium Orb',
        'reroll_weight': 31,
      }),
      dict({
        'chaos_value': 7.0,
        'expected_reroll_profit': -0.0465,
        'icon': 'https://web.poecdn.com/gen/image/WzI1LDE0LHsiZiI6IjJESXRlbXMvQ3VycmVuY3kvRGVsaXJpdW0vRGVsaXJpdW1PcmJGcmFnbWVudHMiLCJ3IjoxLCJoIjoxLCJzY2FsZSI6MX1d/8f24162984/DeliriumOrbFragments.png',
        'lifeforce_per_reroll': 30,
        'name': 'Fragmented Delirium Orb',
        'reroll_weight': 53,
      }),
      dict({
        'chaos_value': 5.0,
        'expected_reroll_profit': 2.5822,
        'icon': 'https://web.poecdn.com/gen/image/WzI1LDE0LHsiZiI6IjJESXRlbXMvQ3VycmVuY3kvRGVsaXJpdW0vRGVsaXJpdW1PcmJUcmlua2V0cyIsInciOjEsImgiOjEsInNjYWxlIjoxfV0/51a3def31b/DeliriumOrbTrinkets.png',
        'lifeforce_per_reroll': 30,
        'name': "Jeweller's Delirium Orb",
        'reroll_weight': 765,
      }),
      dict({
        'chaos_value': 8.0,
        'expected_reroll_profit': -1.0566,
        'icon': 'https://web.poecdn.com/gen/image/WzI1LDE0LHsiZiI6IjJESXRlbXMvQ3VycmVuY3kvRGVsaXJpdW0vRGVsaXJpdW1PcmJCcmVhY2giLCJ3IjoxLCJoIjoxLCJzY2FsZSI6MX1d/9182ffc9b8/DeliriumOrbBreach.png',
        'lifeforce_per_reroll': 30,
        'name': 'Obscured Delirium Orb',
        'reroll_weight': 26,
      }),
      dict({
        'chaos_value': 9.63,
        'expected_reroll_profit': -2.7291,
        'icon': 'https://web.poecdn.com/gen/image/WzI1LDE0LHsiZiI6IjJESXRlbXMvQ3VycmVuY3kvRGVsaXJpdW0vRGVsaXJpdW1PcmJVbmlxdWVzIiwidyI6MSwiaCI6MSwic2NhbGUiOjF9XQ/69797d10bb/DeliriumOrbUniques.png',
        'lifeforce_per_reroll': 30,
        'name': 'Singular Delirium Orb',
        'reroll_weight': 74,
      }),
      dict({
        'chaos_value': 25.0,
        'expected_reroll_profit': -18.1696,
        'icon': 'https://web.poecdn.com/gen/image/WzI1LDE0LHsiZiI6IjJESXRlbXMvQ3VycmVuY3kvRGVsaXJpdW0vRGVsaXJpdW1PcmJTY2FyYWJzIiwidyI6MSwiaCI6MSwic2NhbGUiOjF9XQ/fa4c5160ca/DeliriumOrbScarabs.png',
        'lifeforce_per_reroll': 30,
        'name': 'Skittering Delirium Orb',
        'reroll_weight': 24,
      }),
      dict({
        'chaos_value': 8.0,
        'expected_reroll_profit': -1.0603,
        'icon': 'https://web.poecdn.com/gen/image/WzI1LDE0LHsiZiI6IjJESXRlbXMvQ3VycmVuY3kvRGVsaXJpdW0vRGVsaXJpdW1PcmJHZW1zIiwidyI6MSwiaCI6MSwic2NhbGUiOjF9XQ/9d5221762e/DeliriumOrbGems.png',
        'lifeforce_per_reroll': 30,
        'name': "Thaumaturge's Delirium Orb",
        'reroll_weight': 47,
      }),
      dict({
        'chaos_value': 8.0,
        'expected_reroll_profit': -1.0592,
        'icon': 'https://web.poecdn.com/gen/image/WzI1LDE0LHsiZiI6IjJESXRlbXMvQ3VycmVuY3kvRGVsaXJpdW0vRGVsaXJpdW1PcmJMZWdpb24iLCJ3IjoxLCJoIjoxLCJzY2FsZSI6MX1d/448f80d7c4/DeliriumOrbLegion.png',
        'lifeforce_per_reroll': 30,
        'name': 'Timeless Delirium Orb',
        'reroll_weight': 41,
      }),
      dict({
        'chaos_value': 7.0,
        'expected_reroll_profit': -0.0423,
        'icon': 'https://web.poecdn.com/gen/image/WzI1LDE0LHsiZiI6IjJESXRlbXMvQ3VycmVuY3kvRGVsaXJpdW0vRGVsaXJpdW1PcmJFc3NlbmNlIiwidyI6MSwiaCI6MSwic2NhbGUiOjF9XQ/4c854cba72/DeliriumOrbEssence.png',
        'lifeforce_per_reroll': 30,
        'name': 'Whispering Delirium Orb',
        'reroll_weight': 93,
      }),
    ]),
    'lifeforce': dict({
      'chaos_value': 0.014,
      'icon': 'https://web.poecdn.com/gen/image/WzI1LDE0LHsiZiI6IjJESXRlbXMvQ3VycmVuY3kvSGFydmVzdC9QcmltYWxMaWZlZm9yY2UiLCJ3IjoxLCJoIjoxLCJzY2FsZSI6MX1d/d5d53c61c3/PrimalLifeforce.png',
      'name': 'Primal Crystallised Lifeforce',
    }),
    'total_weight': 3623,
  })
# ---
# name: test_get_overview
  dict({
    'catalysts': dict({
      'items': list([
        dict({
          'chaos_value': 0.5,
          'expected_reroll_profit': 0.4893,
          'icon': 'https://web.poecdn.com/gen/image/WzI1LDE0LHsiZiI6IjJESXRlbXMvQ3VycmVuY3kvQ2F0YWx5c3RzL0FicmFzaXZlQ2F0YWx5c3QiLCJ3IjoxLCJoIjoxLCJzY2FsZSI6MX1d/c4e7f7f379/AbrasiveCatalyst.png',
          'lifeforce_per_reroll': 30,
          'name': 'Abrasive Catalyst',
          'reroll_weight': 334,
        }),
        dict({
          'chaos_value': 1.0,
          'expected_reroll_profit': -0.1532,
          'icon': 'https://web.poecdn.com/gen/image/WzI1LDE0LHsiZiI6IjJESXRlbXMvQ3VycmVuY3kvQ2F0YWx5c3RzL1NwZWVkTW9kaWZpZXJDYXRhbHlzdCIsInciOjEsImgiOjEsInNjYWxlIjoxfV0/592075333a/SpeedModifierCatalyst.png',
          'lifeforce_per_reroll': 30,
          'name': 'Accelerating Catalyst',
          'reroll_weight': 82,
        }),
        dict({
          'chaos_value': 6.54,
          'expected_reroll_profit': -5.9074,
          'icon': 'https://web.poecdn.com/gen/image/WzI1LDE0LHsiZiI6IjJESXRlbXMvQ3VycmVuY3kvQ2F0YWx5c3RzL0ZlcnRpbGVDYXRhbHlzdCIsInciOjEsImgiOjEsInNjYWxlIjoxfV0/4b4ca5d929/FertileCatalyst.png',
          'lifeforce_per_reroll': 30,
          'name': 'Fertile Catalyst',
          'reroll_weight': 83,
        }),
        dict({
          'chaos_value': 0.5,
          'expected_reroll_profit': 0.4606,
          'icon': 'https://web.poecdn.com/gen/image/WzI1LDE0LHsiZiI6IjJESXRlbXMvQ3VycmVuY3kvQ2F0YWx5c3RzL0ltYnVlZENhdGFseXN0IiwidyI6MSwiaCI6MSwic2NhbGUiOjF9XQ/9053293cf6/ImbuedCatalyst.png',
          'lifeforce_per_reroll': 30,
          'name': 'Imbued Catalyst',
          'reroll_weight': 281,
        }),
        dict({
          'chaos_value': 1.0,
          'expected_reroll_profit': -0.0458,
          'icon': 'https://web.poecdn.com/gen/image/WzI1LDE0LHsiZiI6IjJESXRlbXMvQ3VycmVuY3kvQ2F0YWx5c3RzL0ludHJpbnNpY0NhdGFseXN0IiwidyI6MSwiaCI6MSwic2NhbGUiOjF9XQ/107ffb799e/IntrinsicCatalyst.png',
          'lifeforce_per_reroll': 30,
          'name': 'Intrinsic Catalyst',
          'reroll_weight': 529,
        }),
        dict({
          'chaos_value': 0.5,
          'expected_reroll_profit': 0.4876,
          'icon': 'https://web.poecdn.com/gen/image/WzI1LDE0LHsiZiI6IjJESXRlbXMvQ3VycmVuY3kvQ2F0YWx5c3RzL0NoYW9zUGh5c2ljYWxDYXRhbHlzdCIsInciOjEsImgiOjEsInNjYWxlIjoxfV0/bbdf8917e4/ChaosPhysicalCatalyst.png',
          'lifeforce_per_reroll': 30,
          'name': 'Noxious Catalyst',
          'reroll_weight': 331,
        }),
        dict({
          'chaos_value': 9.75,
          'expected_reroll_profit': -9.2701,
          'icon': 'https://web.poecdn.com/gen/image/WzI1LDE0LHsiZiI6IjJESXRlbXMvQ3VycmVuY3kvQ2F0YWx5c3RzL1ByaXNtYXRpY0NhdGFseXN0IiwidyI6MSwiaCI6MSwic2NhbGUiOjF9XQ/5e51d41a0e/PrismaticCatalyst.png',
          'lifeforce_per_reroll': 30,
          'name': 'Prismatic Catalyst',
          'reroll_weight': 90,
        }),
        dict({
          'chaos_value': 2.0,
          'expected_reroll_profit': -1.192,
          'icon': 'https://web.poecdn.com/gen/image/WzI1LDE0LHsiZiI6IjJESXRlbXMvQ3VycmVuY3kvQ2F0YWx5c3RzL1RlbXBlcmluZ0NhdGFseXN0IiwidyI6MSwiaCI6MSwic2NhbGUiOjF9XQ/7b6277022e/TemperingCatalyst.png',
          'lifeforce_per_reroll': 30,
          'name': 'Tempering Catalyst',
          'reroll_weight': 84,
        }),
        dict({
          'chaos_value': 0.8,
          'expected_reroll_profit': 0.1349,
          'icon': 'https://web.poecdn.com/gen/image/WzI1LDE0LHsiZiI6IjJESXRlbXMvQ3VycmVuY3kvQ2F0YWx5c3RzL1R1cmJ1bGVudENhdGFseXN0IiwidyI6MSwiaCI6MSwic2NhbGUiOjF9XQ/fc41fe8950/TurbulentCatalyst.png',
          'lifeforce_per_reroll': 30,
          'name': 'Turbulent Catalyst',
          'reroll_weight': 330,
        }),
        dict({
          'chaos_value': 2.0,
          'expected_reroll_profit': -1.192,
          'icon': 'https://web.poecdn.com/gen/image/WzI1LDE0LHsiZiI6IjJESXRlbXMvQ3VycmVuY3kvQ2F0YWx5c3RzL0NyaXRpY2FsTW9kaWZpZXJDYXRhbHlzdCIsInciOjEsImgiOjEsInNjYWxlIjoxfV0/18e5522c0e/CriticalModifierCatalyst.png',
          'lifeforce_per_reroll': 30,
          'name': 'Unstable Catalyst',
          'reroll_weight': 84,
        }),
      ]),
      'lifeforce': dict({
        'chaos_value': 0.0187,
        'icon': 'https://web.poecdn.com/gen/image/WzI1LDE0LHsiZiI6IjJESXRlbXMvQ3VycmVuY3kvSGFydmVzdC9WaXZpZExpZmVmb3JjZSIsInciOjEsImgiOjEsInNjYWxlIjoxfV0/9e3d712362/VividLifeforce.png',
        'name': 'Vivid Crystallised Lifeforce',
      }),
      'total_weight': 2228,
    }),
    'orbs': dict({
      'items': list([
        dict({
          'chaos_value': 8.0,
          'expected_reroll_profit': -1.0582,
          'icon': 'https://web.poecdn.com/gen/image/WzI1LDE0LHsiZiI6IjJESXRlbXMvQ3VycmVuY3kvRGVsaXJpdW0vRGVsaXJpdW1PcmJBYnlzcyIsInciOjEsImgiOjEsInNjYWxlIjoxfV0/9c2b5d6d64/DeliriumOrbAbyss.png',
          'lifeforce_per_reroll': 30,
          'name': 'Abyssal Delirium Orb',
          'reroll_weight': 35,
        }),
        dict({
          'chaos_value': 5.0,
          'expected_reroll_profit': 2.552,
          'icon': 'https://web.poecdn.com/gen/image/WzI1LDE0LHsiZiI6IjJESXRlbXMvQ3VycmVuY3kvRGVsaXJpdW0vRGVsaXJpdW1PcmJBcm1vdXIiLCJ3IjoxLCJoIjoxLCJzY2FsZSI6MX1d/3f5099006e/DeliriumOrbArmour.png',
          'lifeforce_per_reroll': 30,
          'name': "Armoursmith's Delirium Orb",
          'reroll_weight': 736,
        }),
        dict({
          'chaos_value': 5.0,
          'expected_reroll_profit': 2.5134,
          'icon': 'https://web.poecdn.com/gen/image/WzI1LDE0LHsiZiI6IjJESXRlbXMvQ3VycmVuY3kvRGVsaXJpdW0vRGVsaXJpdW1PcmJXZWFwb25zIiwidyI6MSwiaCI6MSwic2NhbGUiOjF9XQ/1a249fbf02/DeliriumOrbWeapons.png',
          'lifeforce_per_reroll': 30,
          'name': "Blacksmith's Delirium Orb",
          'reroll_weight': 698,
        }),
        dict({
          'chaos_value': 9.8,
          'expected_reroll_profit': -2.886,
          'icon': 'https://web.poecdn.com/gen/image/WzI1LDE0LHsiZiI6IjJESXRlbXMvQ3VycmVuY3kvRGVsaXJpdW0vRGVsaXJpdW1PcmJCbGlnaHQiLCJ3IjoxLCJoIjoxLCJzY2FsZSI6MX1d/b609cfbb50/DeliriumOrbBlight.png',
          'lifeforce_per_reroll': 30,
          'name': 'Blighted Delirium Orb',
          'reroll_weight': 50,
        }),
        dict({
          'chaos_value': 10.0,
          'expected_reroll_profit': -3.1152,
          'icon': 'https://web.poecdn.com/gen/image/WzI1LDE0LHsiZiI6IjJESXRlbXMvQ3VycmVuY3kvRGVsaXJpdW0vRGVsaXJpdW1PcmJNYXBzIiwidyI6MSwiaCI6MSwic2NhbGUiOjF9XQ/ad4a59a2fc/DeliriumOrbMaps.png',
          'lifeforce_per_reroll': 30,
          'name': "Cartographer's Delirium Orb",
          'reroll_weight': 85,
        }),
        dict({
          'chaos_value': 12.0,
          'expected_reroll_profit': -5.2674,
          'icon': 'https://web.poecdn.com/gen/image/WzI1LDE0LHsiZiI6IjJESXRlbXMvQ3VycmVuY3kvRGVsaXJpdW0vRGVsaXJpdW1PcmJEaXZpbmF0aW9uQ2FyZHMiLCJ3IjoxLCJoIjoxLCJzY2FsZSI6MX1d/e47017caab/DeliriumOrbDivinationCards.png',
          'lifeforce_per_reroll': 30,
          'name': "Diviner's Delirium Orb",
          'reroll_weight': 161,
        }),
        dict({
          'chaos_value': 13.0,
          'expected_reroll_profit': -7.1808,
          'icon': 'https://web.poecdn.com/gen/image/WzI1LDE0LHsiZiI6IjJESXRlbXMvQ3VycmVuY3kvRGVsaXJpdW0vRGVsaXJpdW1PcmJDdXJyZW5jeSIsInciOjEsImgiOjEsInNjYWxlIjoxfV0/edac9239bd/DeliriumOrbCurrency.png',
          'lifeforce_per_reroll': 30,
          'name': 'Fine Delirium Orb',
          'reroll_weight': 605,
        }),
        dict({
          'chaos_value': 8.0,
          'expected_reroll_profit': -1.0697,
          'icon': 'https://web.poecdn.com/gen/image/WzI1LDE0LHsiZiI6IjJESXRlbXMvQ3VycmVuY3kvRGVsaXJpdW0vRGVsaXJpdW1PcmJIYXJiaW5nZXIiLCJ3IjoxLCJoIjoxLCJzY2FsZSI6MX1d/707c1f792a/DeliriumOrbHarbinger.png',
          'lifeforce_per_reroll': 30,
          'name': 'Foreboding Delirium Orb',
          'reroll_weight': 99,
        }),
        dict({
          'chaos_value': 8.0,
          'expected_reroll_profit': -1.0574,
          'icon': 'https://web.poecdn.com/gen/image/WzI1LDE0LHsiZiI6IjJESXRlbXMvQ3VycmVuY3kvRGVsaXJpdW0vRGVsaXJpdW1PcmJGb3NzaWxzIiwidyI6MSwiaCI6MSwic2NhbGUiOjF9XQ/ea3a92a762/DeliriumOrbFossils.png',
          'lifeforce_per_reroll': 30,
          'name': 'Fossilised Delirium Orb',
          'reroll_weight': 31,
        }),
        dict({
          'chaos_value': 7.0,
          'expected_reroll_profit': -0.0465,
          'icon': 'https://web.poecdn.com/gen/image/WzI1LDE0LHsiZiI6IjJESXRlbXMvQ3VycmVuY3kvRGVsaXJpdW0vRGVsaXJpdW1PcmJGcmFnbWVudHMiLCJ3IjoxLCJoIjoxLCJzY2FsZSI6MX1d/8f24162984/DeliriumOrbFragments.png',
          'lifeforce_per_reroll': 30,
          'name': 'Fragmented Delirium Orb',
          'reroll_weight': 53,
        }),
        dict({
          'chaos_value': 5.0,
          'expected_reroll_profit': 2.5822,
          'icon': 'https://web.poecdn.com/gen/image/WzI1LDE0LHsiZiI6IjJESXRlbXMvQ3VycmVuY3kvRGVsaXJpdW0vRGVsaXJpdW1PcmJUcmlua2V0cyIsInciOjEsImgiOjEsInNjYWxlIjoxfV0/51a3def31b/DeliriumOrbTrinkets.png',
          'lifeforce_per_reroll': 30,
          'name': "Jeweller's Delirium Orb",
          'reroll_weight': 765,
        }),
        dict({
          'chaos_value': 8.0,
          'expected_reroll_profit': -1.0566,
          'icon': 'https://web.poecdn.com/gen/image/WzI1LDE0LHsiZiI6IjJESXRlbXMvQ3VycmVuY3kvRGVsaXJpdW0vRGVsaXJpdW1PcmJCcmVhY2giLCJ3IjoxLCJoIjoxLCJzY2FsZSI6MX1d/9182ffc9b8/DeliriumOrbBreach.png',
          'lifeforce_per_reroll': 30,
          'name': 'Obscured Delirium Orb',
          'reroll_weight': 26,
        }),
        dict({
          'chaos_value': 9.63,
          'expected_reroll_profit': -2.7291,
          'icon': 'https://web.poecdn.com/gen/image/WzI1LDE0LHsiZiI6IjJESXRlbXMvQ3VycmVuY3kvRGVsaXJpdW0vRGVsaXJpdW1PcmJVbmlxdWVzIiwidyI6MSwiaCI6MSwic2NhbGUiOjF9XQ/69797d10bb/DeliriumOrbUniques.png',
          'lifeforce_per_reroll': 30,
          'name': 'Singular Delirium Orb',
          'reroll_weight': 74,
        }),
        dict({
          'chaos_value': 25.0,
          'expected_reroll_profit': -18.1696,
          'icon': 'https://web.poecdn.com/gen/image/WzI1LDE0LHsiZiI6IjJESXRlbXMvQ3VycmVuY3kvRGVsaXJpdW0vRGVsaXJpdW1PcmJTY2FyYWJzIiwidyI6MSwiaCI6MSwic2NhbGUiOjF9XQ/fa4c5160ca/DeliriumOrbScarabs.png',
          'lifeforce_per_reroll': 30,
          'name': 'Skittering Delirium Orb',
          'reroll_weight': 24,
        }),
        dict({
          'chaos_value': 8.0,
          'expected_reroll_profit': -1.0603,
          'icon': 'https://web.poecdn.com/gen/image/WzI1LDE0LHsiZiI6IjJESXRlbXMvQ3VycmVuY3kvRGVsaXJpdW0vRGVsaXJpdW1PcmJHZW1zIiwidyI6MSwiaCI6MSwic2NhbGUiOjF9XQ/9d5221762e/DeliriumOrbGems.png',
          'lifeforce_per_reroll': 30,
          'name': "Thaumaturge's Delirium Orb",
          'reroll_weight': 47,
        }),
        dict({
          'chaos_value': 8.0,
          'expected_reroll_profit': -1.0592,
          'icon': 'https://web.poecdn.com/gen/image/WzI1LDE0LHsiZiI6IjJESXRlbXMvQ3VycmVuY3kvRGVsaXJpdW0vRGVsaXJpdW1PcmJMZWdpb24iLCJ3IjoxLCJoIjoxLCJzY2FsZSI6MX1d/448f80d7c4/DeliriumOrbLegion.png',
          'lifeforce_per_reroll': 30,
          'name': 'Timeless Delirium Orb',
          'reroll_weight': 41,
        }),
        dict({
          'chaos_value': 7.0,
          'expected_reroll_profit': -0.0423,
          'icon': 'https://web.poecdn.com/gen/image/WzI1LDE0LHsiZiI6IjJESXRlbXMvQ3VycmVuY3kvRGVsaXJpdW0vRGVsaXJpdW1PcmJFc3NlbmNlIiwidyI6MSwiaCI6MSwic2NhbGUiOjF9XQ/4c854cba72/DeliriumOrbEssence.png',
          'lifeforce_per_reroll': 30,
          'name': 'Whispering Delirium Orb',
          'reroll_weight': 93,
        }),
      ]),
      'lifeforce': dict({
        'chaos_value': 0.014,
        'icon': 'https://web.poecdn.com/gen/image/WzI1LDE0LHsiZiI6IjJESXRlbXMvQ3VycmVuY3kvSGFydmVzdC9QcmltYWxMaWZlZm9yY2UiLCJ3IjoxLCJoIjoxLCJzY2FsZSI6MX1d/d5d53c61c3/PrimalLifeforce.png',
        'name': 'Primal Crystallised Lifeforce',
      }),
      'total_weight': 3623,
    }),
  })
# ---
